# NPUWattch

./: LICENSE  README.md  pyproject.toml
dataset_gen/NW_logic/: clean.sh
dataset_gen/NW_logic/TECH_20nm/run_scripts/: autorun.sh
dataset_gen/NW_logic/master_tcl/: 01_syn.tcl  02_pnr.tcl  03_pex.strc
dataset_gen/NW_logic/rtl/fpadder/: fpadder.uninit_v  fpadder.v  fpadder_200M.cfg
dataset_gen/NW_logic/rtl/fpmult/: fpmult.uninit_v  fpmult.v  fpmult_tb.v
dataset_gen/NW_logic/tech_libs/: catalog.json
dataset_gen/NW_logic/tech_libs/techlib_02nm/: i3d_2nm.tluplus  i3d_nsfet2nm.strc.map  i3d_nsfet2nm_5t_final.mw.tf  liberty_2nm_tt.db
dataset_gen/NW_logic/tech_libs/techlib_03nm/: i3d_nsfet3nm.mw.tf  i3d_nsfet3nm.strc.map  i3d_nsfet3nm.tluplus  i3d_nsfet3nm_final.mw.tf  liberty_3nm_tt.db  liberty_3nm_tt.lib
dataset_gen/NW_logic/tech_libs/techlib_05nm/: i3d_finfet5nm.db  i3d_finfet5nm.mw.tf  i3d_finfet5nm.strc.map  i3d_finfet5nm.tluplus
dataset_gen/NW_logic/tech_libs/techlib_07nm/: 7nm_starrc_map_file  finfet_7nm.tluplus  finfet_7nm_mw.tf  i3d_7nm_HP_0V75_25C.db
src/estimator/: __init__.py
src/estimator/adder/: __init__.py  adder.py
src/estimator/crossbar/: crossbar.py
src/estimators/crossbar/: crossbar.py
src/estimators/custom/: custom.py  custom_lib.csv
src/estimators/regfile/: regfile.py  regfile_area_model.pth  regfile_energy_model.pth
src/npuwattch/: npuwattch_class_mapper.py  npuwattch_console.py  npuwattch_custom_lib.py  npuwattch_db.py  npuwattch_estimator_host.py  npuwattch_messages.py  npuwattch_parser.py  yaml_flattener_accelergy_v4.py
(+39 files in other folders)
